finish fix entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.defer-datasource-initialization=true
 
 movie_upload_path=src/main/resources/static/images/movie/
 crew_upload_path=src/main/resources/static/images/crew/
+cinema_upload_path=src/main/resources/static/images/cinema/
