--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
+
+movie_upload_path=src/main/resources/static/images/movie/
+crew_upload_path=src/main/resources/static/images/crew/
+cinema_upload_path=src/main/resources/static/images/cinema/
