--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,23 @@ spring.jpa.defer-datasource-initialization=true
 movie_upload_path=src/main/resources/static/images/movie/
 crew_upload_path=src/main/resources/static/images/crew/
 cinema_upload_path=src/main/resources/static/images/cinema/
+
+#Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wahahah123.q@gmail.com
+spring.mail.password=pgyjjvvnrwycppqm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+#OTP mail config
+otp.mail.subject=My Shop OTP Mail
+otp.mail.message=Do not share the following code to others
+support.mail=wahahah123.q@gmail.com
+
+#Booking mail config
+ticket.mail.subject=Your Ticket is confirmed
