--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 
 #OTP mail config
-otp.mail.subject=My Shop OTP Mail
+otp.mail.subject=KyiMal OTP Mail
 otp.mail.message=Do not share the following code to others
 support.mail=wahahah123.q@gmail.com
 
